refactor: add cname and router support
