# pkg/tsuru/model_app_c_name.go
@@ -1,0 +1,15 @@
+/*
+ * Tsuru
+ *
+ * Open source, extensible and Docker-based Platform as a Service (PaaS)
+ *
+ * API version: 1.6
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package tsuru
+
+// Application CNames
+type AppCName struct {
+	Cname []string `json:"cname,omitempty"`
+}
