# pkg/tsuru/model_app_router.go
@@ -1,0 +1,21 @@
+/*
+ * Tsuru
+ *
+ * Open source, extensible and Docker-based Platform as a Service (PaaS)
+ *
+ * API version: 1.6
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package tsuru
+
+// Application Router
+type AppRouter struct {
+	Name         string                 `json:"name,omitempty"`
+	Opts         map[string]interface{} `json:"opts,omitempty"`
+	Address      string                 `json:"address,omitempty"`
+	Addresses    []string               `json:"addresses,omitempty"`
+	Type         string                 `json:"type,omitempty"`
+	Status       string                 `json:"status,omitempty"`
+	StatusDetail string                 `json:"status-detail,omitempty"`
+}
